# daily-haskell

./: README.md  diary.md
effective-haskell/: 00-meta.md  01-getting-started-with-haskell.md
effective-haskell/examples/ch01/: FizzBuzz.hs
effective-haskell/examples/ch02/: Folding.hs  Mapping.hs
effective-haskell/examples/ch03/: Scratch.hs
effective-haskell/examples/ch04/: Calc.hs  Scratch.hs
effective-haskell/examples/ch05/minimal/: minimal.cabal
effective-haskell/examples/ch05/minimal/app/: Main.hs
effective-haskell/examples/ch05/minimal/src/: Foobar.hs
effective-haskell/examples/ch05/sandbox/: sandbox.cabal
effective-haskell/exercises/ch01/: Currying.hs  Factorial.hs  Fibonacci.hs
effective-haskell/exercises/ch02/: ConcatMap.hs  InfiniteLists.hs  MapsAndFolds.hs  Reversing.hs  Zipping.hs
effective-haskell/exercises/ch03/: Filling.hs  FuncTypes.hs  Undefined.hs
effective-haskell/exercises/ch04/: PlantingTrees.hs  TODO
effective-haskell/notes/: 01-getting-started-with-haskell.md  02-working-with-lists.md  03-getting-started-with-types.md  04-creating-new-types.md  05-creating-and-structuring-haskell-projects.md
learn-physics-with-functional-programming/exercises/: ch01.md
learn-you-a-haskell/: notes.md
learn-you-a-haskell/examples/: ch03.hs  ch07.hs
notes/: openbsd-setup.md
programming-in-haskell/: notes.md
programming-in-haskell/examples/: caesar.hs  ch01.hs  ch03.hs  ch04.hs  ch05.hs  ch06.hs  ch08.hs  ch10.hs  ch12.hs  countdown.hs  hangman.hs  life.hs  nim.hs  tautology.hs  tic-tac-toe-bot.hs  tic-tac-toe-human.hs  tic-tac-toe.hs  voting.hs
reversi/: .gitignore  LICENSE  Makefile  grids.hs  issue.txt  reversi.cabal  reversi.hs
reversi/app/: Main.hs
spot/: Makefile  README.md  TODO.md  spot  spot.hi  spot.hs
(+79 files in other folders)
