cabal-version: 3.14
name:          minimal
version:       0.1.0.0
license:       NONE
library
    exposed-modules:  Foobar
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
executable minimal
    main-is:          Main.hs
    build-depends:    base
                    , text
		    , minimal
    hs-source-dirs:   app
    default-language: Haskell2010
