cabal-version:      3.14
name:               sandbox
version:            0.1.0.0
synopsis:           playing in a sandbox
-- description:
license:            MIT
license-file:       LICENSE
author:             Patrick Bucher
maintainer:         patrick.bucher@mailbox.org
-- copyright:
category:           learning
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable sandbox
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.2.0,
        sandbox

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite sandbox-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        sandbox
